--- a/code/API_definitions/device-roaming-status.yaml
+++ b/code/API_definitions/device-roaming-status.yaml
@@ -279,6 +279,7 @@ components:
         type: string
 
     RequestRoamingStatus:
+      description: The request for retrieving the current roaming status for the requested device.
       type: object
       properties:
         device:
@@ -287,6 +288,7 @@ components:
         - device
 
     ErrorInfo:
+      description: The error object used for error-cases.
       type: object
       required:
         - status
@@ -313,7 +315,7 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/ErrorInfo"
-          example:
+          examples:
             GENERIC_400_INVALID_ARGUMENT:
               description: Invalid Argument. Generic Syntax Exception
               value:
@@ -329,7 +331,7 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/ErrorInfo"
-          example:
+          examples:
             GENERIC_401_UNAUTHENTICATED:
               description: Request cannot be authenticated
               value:
