--- a/code/API_definitions/device-roaming-status.yaml
+++ b/code/API_definitions/device-roaming-status.yaml
@@ -53,14 +53,14 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.6.0-rc.1
+  version: 0.6.0
   x-camara-commonalities: 0.4.0
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
 
 servers:
-  - url: "{apiRoot}/device-roaming-status/v0.6rc1"
+  - url: "{apiRoot}/device-roaming-status/v0.6"
     variables:
       apiRoot:
         default: http://localhost:9091
